--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
     "simple-zustand-devtools": "^1.1.0",
     "sweetalert2": "^11.26.11",
     "tailwind": "^2.3.1",
