--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,14 @@
 DEBUG=True
+
+SECRET_KEY=django-insecure-l=$(tvb+ms%hm_ogy=xla5)n2il-su-zb(tnx&d*k5&62ei(5s
 EMAIL_HOST_USER=dinoma.ecommerce@gmail.com
-EMAIL_HOST_PASSWORD=hxgj vrbi gqsz likp
+EMAIL_HOST_PASSWORD=hxgjvrbigqszlikp
+
+
+AWS_ACCESS_KEY_ID=PLW79KO1C6F1I4I9O6I0
+AWS_SECRET_ACCESS_KEY=bGICmFaXJJqEsvg9eAUZO1IoAdp3QjjZXzpDdUIc 
+AWS_STORAGE_BUCKET_NAME=dinoma
+AWS_S3_REGION_NAME=eu-central-2
+
+DB_PASSWORD=!M13841384m1785!
+DB_NAME=dinoma_db
